vendored_parsers/tree-sitter-cmake/test/corpus/function_calls.txt
===================================================
add_custom_target without new line [function_calls]
===================================================

add_custom_target(OUTPUT somefile)

---

(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (unquoted_argument))
      (argument (unquoted_argument))
    )
  )
)

================================================
add_custom_target with new line [function_calls]
================================================

add_custom_target(
  OUTPUT somefile)

---

(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (unquoted_argument))
      (argument (unquoted_argument))
    )
  )
)
