vendored_parsers/tree-sitter-cmake/test/corpus/quoted_argument.txt
===========================================
One empty quoted argument [quoted_argument]
===========================================

message("")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (quoted_argument))
    )
  )
)

=====================================
One quoted argument [quoted_argument] 
=====================================

message("An argument")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (quoted_argument (quoted_element)))
    )
  )
)

======================================
Two quoted arguments [quoted_argument] 
======================================

message("First argument" "Second argument")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (quoted_argument (quoted_element)))
      (argument (quoted_argument (quoted_element)))
    )
  )
)

===================================================
A quoted argument with line break [quoted_argument] 
===================================================

message("An argument
with line break")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument (quoted_argument (quoted_element)))
    )
  )
)

========================================
One variable reference [quoted_argument] 
========================================

message("${var}")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element
            (variable_ref (normal_var (variable)))
          )
        )
      )
    )
  )
)

=========================================
Two Variable references [quoted_argument]
=========================================

message("${var} ${var}")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element
            (variable_ref (normal_var (variable)))
            (variable_ref (normal_var (variable)))
          )
        )
      )
    )
  )
)

======================================================================
Variable reference inside another variable reference [quoted_argument]
======================================================================

message("${var_${var}}")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element
            (variable_ref (normal_var (variable (variable_ref (normal_var (variable))))))
          )
        )
      )
    )
  )
)

======================================================================
Lookalike bracket comment inside quoted argument [quoted_argument]
======================================================================

message("${var_${var}} #[[comment]]")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element
            (variable_ref (normal_var (variable (variable_ref (normal_var (variable))))))
          )
        )
      )
    )
  )
)

======================================================================
Lookalike line comment inside quoted argument [quoted_argument]
======================================================================

message("${var_${var}} #comment")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element
            (variable_ref (normal_var (variable (variable_ref (normal_var (variable))))))
          )
        )
      )
    )
  )
)

===========================================================
Lookalike variable inside quoted argument [quoted_argument]
===========================================================

message("$var")

---
(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (quoted_argument
          (quoted_element)
        )
      )
    )
  )
)
